Fix css issue on dialog on small screens

--- a/src/app/pages/map/dialog/dialog.component.scss
+++ b/src/app/pages/map/dialog/dialog.component.scss
@@ -49,6 +49,12 @@
 
 .parent-report-column {
     flex: 0 0 60%;
+    height: 100%;
+    overflow-y: auto;
+}
+
+.parent-report-column::-webkit-scrollbar {
+    display: none;
 }
 
 h2 {
